default profile picture added

--- a/teachers_dir/directory/static/directory/styles/css/directory.css
+++ b/teachers_dir/directory/static/directory/styles/css/directory.css
@@ -4,8 +4,8 @@
 
 .img-div {
     padding:30px;
-    height:30%;
-    width:30%;
+    height:600px;
+    width:600px;
     box-align:center;
     background-position:center;
     background-repeat: no-repeat;
