--- a/teachers_dir/directory/templates/directory/directory.html
+++ b/teachers_dir/directory/templates/directory/directory.html
@@ -1,7 +1,9 @@
+{% load static %}
 <link rel="stylesheet" href="../../static/styles/css/directory.css">
 <br><br>
 <div>
     <h1 align="center">Directory App</h1>
+    <a align='right' href='admin/'>Admin</a>
     <div >
         <table align="center">
             <div class="header_row">
