--- a/teachers_dir/directory/templates/directory/directory.html
+++ b/teachers_dir/directory/templates/directory/directory.html
@@ -1,5 +1,8 @@
 {% load static %}
-<link rel="stylesheet" href="../../static/styles/css/directory.css">
+<link rel="stylesheet" href="../../static/directory/styles/css/directory.css">
+<header>
+    <title>Direcotry App</title>
+</header>
 <br><br>
 <div>
     <h1 align="center">Directory App</h1>
@@ -11,7 +14,7 @@
                     <td style="width: 100px;"><h4 align="center">Profile</h4></td>
                     <td style="width: 100px;"><h4 align="center">First Name</h4></td>
                     <td style="width: 100px;"><h4 align="center">Last Name</h4></td>
-                    <td style="width: 100px;"><h4 align="center">Email Address</h4></td>
+                    <td style="width: 100px;"><h4 align="center">Email  Address</h4></td>
                     <td style="width: 104px;"><h4 align="center">Phone Number</h4></td>
                     <td style="width: 120px;"><h4 align="center">Room Number</h4></td>
                     <td style="width: 100px;"><h4 align="center">Subjects Taught</h4></td>
