--- a/teachers_dir/directory/templates/directory/profile.html
+++ b/teachers_dir/directory/templates/directory/profile.html
@@ -1,15 +1,39 @@
 {% load static %}
-<link rel="stylesheet" href="../../static/styles/css/directory.css">
+<link rel="stylesheet" href="../../static/directory/styles/css/directory.css">
+<hearder>
+    <title>{{teacher.First_Name}} {{teacher.Last_Name}}</title>
+</hearder>
 <body>
-    <br><br>
-    <div class='div-h1'><h1 align='center'>{{teacher.First_Name}} {{teacher.Last_Name}}</h1></div>
-    <p align='center'>Email: {{teacher.Email_Address}}</p>
-    <p align='center'>Phone Number: {{teacher.Phone_Number}}</p>
-    <p align='center'>Room Number: {{teacher.Room_Number}}</p>
-    <p align='center'>Subjects Taught: {{teacher.Subjects_Taught}}</p>
-    
-    <!--img src="../../static/directory/img/21350.JPG"/-->
-    <img class='img-div' src="{% static '../' %}{{url}}" />
+
+    <!--div class="page-container"-->
+        <div class='div-h1'>
+            <h1>{{teacher.First_Name}} {{teacher.Last_Name}}</h1>
+        </div>
+        <!--div><a align='right' href='admin/'><h4>Admin</h4></a></div-->
+        <!--    div class="details-wrapper"-->
+            <div class="text-wrapper">
+                <div class="inner-text-wrapper">
+                    <div>
+                        <p><b>Email Address:</b>   {{teacher.Email_Address}}</p>
+                    </div>
+                    <div>
+                        <p><b>Phone Number:</b>    {{teacher.Phone_Number}}</p>
+                    </div>
+                    <div>
+                        <p><b>Room Number:</b>     {{teacher.Room_Number}}</p>
+                    </div>
+                    <div>
+                        <p><b>Subjects Taught:</b> {{teacher.Subjects_Taught}}</p>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="img-wrapper">
+                <img class='img-div' src="{% static '../' %}{{url}}" />
+                <div class="admin-link-div"><a align='right' href='admin/'><h4>Admin</h4></a></div>
+            </div>
+        <!--/div-->
+    <!--/div-->
 <body>
 
 
